--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "'文件备注工具'",
 	"version": "0.0.1",
 	"engines": {
-		"vscode": "^1.60.0"
+		"vscode": "^1.85.0"
 	},
 	"author": "小羊",
 	"publisher": "小羊",
@@ -19,6 +19,10 @@
 		"备注"
 	],
 	"icon": "static/img/icon.png",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sunweixin8/SuperFileNotes"
+	},
 	"categories": [
 		"Other"
 	],
