--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "remark",
 	"displayName": "Super File Notes",
 	"description": "文件备注工具",
-	"version": "0.0.5",
+	"version": "0.0.6",
 	"engines": {
 		"vscode": "^1.85.0"
 	},
@@ -42,7 +42,11 @@
 			},
 			{
 				"command": "viewRemark",
-				"title": "♐3.查看所有备注"
+				"title": "♐3.查看备注"
+			},
+			{
+				"command": "viewAllRemark",
+				"title": "♐4.查看所有备注"
 			}
 		],
 		"menus": {
@@ -57,6 +61,10 @@
 				},
 				{
 					"command": "viewRemark",
+					"group": "navigation"
+				},
+				{
+					"command": "viewAllRemark",
 					"group": "navigation"
 				}
 			]
