--- a/package.json
+++ b/package.json
@@ -53,6 +53,23 @@
 			{
 				"command": "refreshRemark",
 				"title": "刷新备注"
+			},
+			{
+				"command": "superFileNotes.refreshRemarkTree",
+				"title": "刷新备注列表",
+				"icon": "$(refresh)"
+			},
+			{
+				"command": "superFileNotes.openFile",
+				"title": "打开文件"
+			},
+			{
+				"command": "superFileNotes.viewRemarkFromTree",
+				"title": "查看备注"
+			},
+			{
+				"command": "superFileNotes.deleteRemarkFromTree",
+				"title": "清除备注"
 			}
 		],
 		"menus": {
@@ -83,6 +100,30 @@
 					"command": "refreshRemark",
 					"group": "2_manage"
 				}
+			],
+			"view/title": [
+				{
+					"command": "superFileNotes.refreshRemarkTree",
+					"when": "view == superFileNotes.remarkTreeView",
+					"group": "navigation"
+				}
+			],
+			"view/item/context": [
+				{
+					"command": "superFileNotes.openFile",
+					"when": "view == superFileNotes.remarkTreeView && viewItem == file",
+					"group": "1_notes"
+				},
+				{
+					"command": "superFileNotes.viewRemarkFromTree",
+					"when": "view == superFileNotes.remarkTreeView",
+					"group": "1_notes"
+				},
+				{
+					"command": "superFileNotes.deleteRemarkFromTree",
+					"when": "view == superFileNotes.remarkTreeView",
+					"group": "2_manage"
+				}
 			]
 		},
 		"submenus": [
@@ -92,6 +133,16 @@
 				"icon": "$(note)"
 			}
 		],
+		"views": {
+			"explorer": [
+				{
+					"id": "superFileNotes.remarkTreeView",
+					"name": "文件备注列表",
+					"icon": "$(note)",
+					"contextualTitle": "文件备注"
+				}
+			]
+		},
 		"keybindings": [
 			{
 				"command": "addRemark",
